tests/paczka1/fuzzy1/98028924.err
Error in line 6: wWNZ7RLzPy4 A428 47,47
Error in line 5: wWNZ7RLzPy4 A509 59,5
Error in line 11: GC0MbL A428 93,3
Error in line 21: LTtA A428 99,0
Error in line 24: LTtA A509 84,7
Error in line 35: wWNZ7RLzPy4 A428 94,9
Error in line 36: wWNZ7RLzPy4 S213 94,5
